--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -6,6 +6,6 @@ layout: default
 
 {% assign resource = site.data.plugins[page.resource] %}
 
-{{ resource.attributes.downloads }}
+<p>{{ resource.attributes.description }}</p>
 
 {{content}}
