--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-<h1>{{ page.type }} > {{ page.resource }}</h1>
+<h1>{{ page.resource }}</h1>
+<h2>{{ page.type }}</h2>
 
 {% assign resource = site.data.plugins[page.resource] %}
 
