--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-<a href="../">back</a>
-</br>
-<h1>{{ page.resource }}</h1>
+<h1><a href="../">Providers</a> / {{ page.resource }}</h1>
 
 {% assign resource = site.data.plugins[page.resource] %}
 {% if resource.attributes.description != "" %}
