--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<h1><a href="../">Providers</a> / {{ page.resource }}</h1>
+<h1><a href="../">providers</a> / {{ page.resource }}</h1>
 
 {% assign resource = site.data.plugins[page.resource] %}
-{% if resource.attributes.description != "" %}
+{% if resource.attributes.description %}
 <h3>Description</h3>
 <p>{{ resource.attributes.description }}</p>
 {% endif %}
